# task_cli

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
scripts/: rebuild_readme.py  tasks.py
tests/: test_tasks.py
