[project]
name = "task-cli"
version = "0.1.0"
description = "Local task lifecycle orchestrator replacing 5-7 manual steps with a single CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]
transcribe = [
    "mlx-whisper",
]

[project.scripts]
tasks = "scripts.tasks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
